# log-ingestor

./: .gitignore  Cargo.toml  README.md  benchmark.py  error_logs.jsonl
src/: main.rs
